# outgoing-mailgun

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.rst  outgoing_mailgun.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: integration-test.yml  test.yml
src/outgoing_mailgun/: __init__.py
test/: conftest.py  test_integration.py  test_mailgun.py  test_util.py
