[metadata]
name = outgoing-mailgun
version = attr:outgoing_mailgun.__version__
description = outgoing extension for Mailgun
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = outgoing-mailgun@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/outgoing-mailgun

keywords =
    Mailgun
    e-mail
    email
    outgoing

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Topic :: Communications :: Email
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/outgoing-mailgun
    Bug Tracker = https://github.com/jwodder/outgoing-mailgun/issues

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.7
install_requires =
    mailbits ~= 0.2
    outgoing ~= 0.1
    pydantic ~= 1.7
    requests ~= 2.20
    typing_extensions; python_version < "3.8"

[options.packages.find]
where = src

[options.entry_points]
outgoing.senders =
    mailgun = outgoing_mailgun:MailgunSender

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
plugins = pydantic.mypy

[pydantic-mypy]
init_forbid_extra = True
warn_untypes_fields = True
